// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LogoTitle general functionality should match snapshot 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "justifyContent": "center",
      },
      {
        "marginTop": 0,
      },
    ]
  }
  testID="logo-title-container-id"
>
  <Image
    source="logo_image"
    style={
      {
        "height": 80,
        "width": 80,
      }
    }
    testID="logo-title-image-id"
  />
  <Text
    style={
      {
        "color": "#FFF",
        "fontSize": 28,
        "fontWeight": "bold",
        "marginTop": 10,
      }
    }
  >
    test-title
  </Text>
</View>
`;

exports[`LogoTitle when is android should match snapshot 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "justifyContent": "center",
      },
      {
        "marginTop": 56,
      },
    ]
  }
  testID="logo-title-container-id"
>
  <Image
    source="logo_image"
    style={
      {
        "height": 80,
        "width": 80,
      }
    }
    testID="logo-title-image-id"
  />
  <Text
    style={
      {
        "color": "#FFF",
        "fontSize": 28,
        "fontWeight": "bold",
        "marginTop": 10,
      }
    }
  >
    test-title
  </Text>
</View>
`;
